[gd_scene load_steps=3 format=3 uid="uid://c348kslvfqtnc"]

[ext_resource type="Script" uid="uid://b4qtghteavmli" path="res://main_scene.gd" id="1_0f027"]
[ext_resource type="AudioStream" uid="uid://b6e1vk0fsjg33" path="res://Alarm Cropped.mp3" id="2_2c62f"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_0f027")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TimerLbl" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "20:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StopBtn" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.447049
anchor_top = 0.560185
anchor_right = 0.484375
anchor_bottom = 0.608025
offset_bottom = -3.05176e-05
text = "Stop"
metadata/_edit_use_anchors_ = true

[node name="PlayBtn" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.519097
anchor_top = 0.560185
anchor_right = 0.554688
anchor_bottom = 0.608025
offset_bottom = -3.05176e-05
text = "Play"
metadata/_edit_use_anchors_ = true

[node name="AlarmPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_2c62f")

[connection signal="pressed" from="CanvasLayer/StopBtn" to="." method="_on_stop_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/PlayBtn" to="." method="_on_play_btn_pressed"]
